--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ nav .items .item {
   border-radius: 50px;
   margin: 1rem;
   cursor: pointer;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease;
 }
 
 /* .filter span:hover {
