--- a/css/styles.css
+++ b/css/styles.css
@@ -209,7 +209,7 @@ body {
 
 nav .items .item {
   padding: 8px 20px;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   font-weight: 500;
   border: 2px solid #fff;
   white-space: nowrap;
@@ -377,11 +377,13 @@ nav .items .item:hover {
 .footer_contact span i {
   margin-right: 1rem;
   font-size: 2.4rem;
+  vertical-align: middle;
 }
 
 @media screen and (max-width: 768px) {
   .footer_contact span i {
     font-size: 2rem;
+    vertical-align: middle;
   }
 }
 
@@ -393,7 +395,7 @@ nav .items .item:hover {
   }
 
   .footer_contact span {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-bottom: 0;
   }
 }
